--- a/app/src/main/res/layout-sw600dp-land/splash_screen.xml
+++ b/app/src/main/res/layout-sw600dp-land/splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ZevcoreAccountingSystemSplashScreen">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ZevCoreSplashScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,7 +29,39 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.955" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/zevcoreUrl"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:autofillHints="Enter URL"
+        android:gravity="center_horizontal"
+        android:hint="Enter URL"
+        android:inputType="textUri"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintLeft_toLeftOf="@+id/progressBar"
+        app:layout_constraintRight_toRightOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.65" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_ripple_effect"
+        android:text="Next"
+        android:layout_centerHorizontal="true"
+        android:textAllCaps="false"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="20sp"
+        android:onClick="loadWebView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="@+id/zevcoreUrl"
+        app:layout_constraintRight_toRightOf="@+id/zevcoreUrl"
+        app:layout_constraintTop_toTopOf="@+id/zevcoreUrl"
+        app:layout_constraintVertical_bias="0.4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
