--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ZevcoreAccountingSystemSplashScreen">
 
-
-
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ZevCoreSplashScreen"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -32,9 +30,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.653" />
+        app:layout_constraintVertical_bias="0.508" />
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/zevcoreUrl"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -49,5 +47,22 @@
         app:layout_constraintRight_toRightOf="@+id/progressBar"
         app:layout_constraintTop_toTopOf="@+id/progressBar"
         app:layout_constraintVertical_bias="0.65" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_ripple_effect"
+        android:text="Next"
+        android:layout_centerHorizontal="true"
+        android:textAllCaps="false"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="20sp"
+        android:onClick="loadWebView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintLeft_toLeftOf="@+id/zevcoreUrl"
+        app:layout_constraintRight_toRightOf="@+id/zevcoreUrl"
+        app:layout_constraintTop_toTopOf="@+id/zevcoreUrl"
+        app:layout_constraintVertical_bias="0.226" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
